test/invalid/double_quote_string_unfinished.d
//T error: double_quote_string_unfinished.d:4:11:
//T error: Unexpected termination of literal

string s = "plop
